# aws_kiro_hackathon_communityspark

./: .gitignore  BUILDING.md  README.md  database.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.kiro/hooks/: deal-expiry-check.md  ruff-on-save.json
.kiro/specs/: ai-agent.md  business-registration.md  deals-engine.md
.kiro/steering/: project.md
routers/: agents.py  businesses.py  deals.py  reviews.py
static/css/: styles.css
templates/: base.html  business.html  deals.html  index.html  register.html
