[project]
name = "communityspark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
    "ruff>=0.15.7",
    "uvicorn>=0.42.0",
]
